--- a/client/forestFocus.html
+++ b/client/forestFocus.html
@@ -1,19 +1,5 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroicHabits</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>-->
 
-<!DOCTYPE html>
-<html lang="en">
+<html class="">
               
 <head>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
@@ -591,10 +577,8 @@
     };
 </script>
 </head>
-
-
         <body class="h-full text-base-content">
-          <div id="main-container" class="bg-gradient-to-b from-yellow-50 to-blue-50">
+          <div id="main-container" class="bg-gradient-to-b from-green-900 to-blue-900">
 <header id="header" class="fixed top-0 w-full bg-white/80 backdrop-blur-sm z-50 border-b border-blue-100">
   <div class="container mx-auto px-6 py-4">
       <div class="flex items-center justify-between">
@@ -617,84 +601,42 @@
       </div>
   </div>
 </header>
-<section id="hero" class="pt-24 h-[600px] relative overflow-hidden">
-<img class="absolute inset-0 w-full h-full object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/273092d4c4-10b634e17123f9dc8a1c.png" alt="pixel art landscape with mystical mountains and floating islands in shades of blue and yellow, with glowing crystals and ethereal clouds, 16-bit style">
-<div class="relative container mx-auto px-6 py-20">
-  <div class="max-w-2xl">
-      <h2 class="text-4xl font-bold text-white mb-6">Level Up Your Life</h2>
-      <p class="text-xl text-white mb-8">Transform your daily habits into an epic adventure. Track, improve, and conquer your goals one quest at a time.</p>
-      <div class="flex space-x-4">
-          <button class="bg-yellow-500 hover:bg-yellow-600 text-white px-8 py-3 rounded-lg">Start Your Journey</button>
+<section id="focus-forest" class="pt-24 h-[800px] relative overflow-hidden">
+<img class="absolute inset-0 w-full h-full object-cover [image-rendering:pixelated]" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/435450be5a-6879aed88c0abb80f31f.png" alt="pixel art campsite with campfire in dense forest under starry night sky, 8-bit NES style, highly pixelated, warm glowing fire, adventure game aesthetic, low resolution pixel art">
+<div class="relative container mx-auto px-6 py-12 text-center">
+  <h2 class="text-7xl font-bold text-white mb-12 drop-shadow-lg">Time to take a mindful rest to recover HP</h2>
+  <div class="bg-white/10 backdrop-blur-md rounded-2xl p-8 max-w-md mx-auto">
+      <div class="text-6xl font-bold text-white mb-8">
+          <span id="timer">25:00</span>
+      </div>
+      <div class="flex justify-center mb-8">
+          <select class="bg-blue-900/50 text-white px-4 py-2 rounded-lg border border-blue-400 backdrop-blur-sm">
+              <option value="5">5 minutes</option>
+              <option value="10">10 minutes</option>
+              <option value="15">15 minutes</option>
+              <option value="20">20 minutes</option>
+              <option value="25" selected="">25 minutes</option>
+              <option value="30">30 minutes</option>
+              <option value="45">45 minutes</option>
+              <option value="60">60 minutes</option>
+          </select>
+      </div>
+      <div class="flex justify-center space-x-4">
+          <button class="bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
+              <i class="fa-solid fa-play"></i>
+              <span>Start</span>
+          </button>
+          <button class="bg-red-500 hover:bg-red-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
+              <i class="fa-solid fa-stop"></i>
+              <span>Stop</span>
+          </button>
+          <button class="bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded-lg flex items-center space-x-2">
+              <i class="fa-solid fa-rotate"></i>
+              <span>Reset</span>
+          </button>
       </div>
   </div>
 </div>
-</section>
-<section id="scene-cards" class="py-16 container mx-auto px-6">
-  <h3 class="text-2xl font-bold text-blue-800 mb-8">Your Active Quests</h3>
-  <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/21abd35af0-a38af54f0951f27fd82f.png" alt="pixel art forest scene with trees and mystical elements, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Forest of Focus</h4>
-              <p class="text-blue-600 text-sm mb-4">Complete daily meditation tasks</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 7/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/1acceabec3-38d674ae3a94cf57bab5.png" alt="pixel art mountain peaks with clouds, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Peak Performance</h4>
-              <p class="text-blue-600 text-sm mb-4">Fitness goals tracking</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 5/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-      <!-- to be inserted in phase 2
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/5fb43c4e64-b880b55f8bd39b4fb40a.png" alt="pixel art crystal cave with glowing elements, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Crystal Clarity</h4>
-              <p class="text-blue-600 text-sm mb-4">Mind training exercises</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 3/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-    -->
-  </div>
-</section>
-<section id="quick-actions" class="py-16 bg-white">
-  <div class="container mx-auto px-6">
-      <h3 class="text-2xl font-bold text-blue-800 mb-8">Quick Actions</h3>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-          <div class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors">
-              <i class="fa-solid fa-plus-circle text-blue-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-blue-800 mb-2">New Task</h4>
-              <p class="text-blue-600 text-sm">Create a new daily quest</p>
-          </div>
-          <div class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors">
-              <i class="fa-solid fa-coins text-yellow-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-yellow-800 mb-2">Budget</h4>
-              <p class="text-yellow-600 text-sm">Set daily spending limits</p>
-          </div>
-          <div class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors">
-              <i class="fa-solid fa-chart-line text-blue-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-blue-800 mb-2">Progress</h4>
-              <p class="text-blue-600 text-sm">View your journey stats</p>
-          </div>
-          <div class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors">
-              <i class="fa-solid fa-trophy text-yellow-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-yellow-800 mb-2">Achievements</h4>
-              <p class="text-yellow-600 text-sm">Check your badges</p>
-          </div>
-      </div>
-  </div>
 </section>
 <footer id="footer" class="bg-blue-900 text-blue-100">
   <div class="container mx-auto px-6 py-12">
