--- a/client/peakPerformance.html
+++ b/client/peakPerformance.html
@@ -1,16 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroicHabits</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -591,151 +578,131 @@
     };
 </script>
 </head>
-
-
         <body class="h-full text-base-content">
-          <div id="main-container" class="bg-gradient-to-b from-yellow-50 to-blue-50">
-<header id="header" class="fixed top-0 w-full bg-white/80 backdrop-blur-sm z-50 border-b border-blue-100">
-  <div class="container mx-auto px-6 py-4">
-      <div class="flex items-center justify-between">
-          <div class="flex items-center space-x-2">
-              <i class="fa-solid fa-gamepad text-blue-600 text-2xl"></i>
-              <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
-          </div>
-          <nav class="hidden md:flex space-x-8">
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</span>
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Tasks</span>
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Progress</span>
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Settings</span>
-          </nav>
-          <div class="flex items-center space-x-4">
-              <button class="text-blue-700 hover:text-blue-500">
-                  <i class="fa-regular fa-bell text-xl"></i>
-              </button>
-              <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-3.jpg" alt="Profile" class="w-10 h-10 rounded-full border-2 border-blue-300">
-          </div>
-      </div>
-  </div>
-</header>
-<section id="hero" class="pt-24 h-[600px] relative overflow-hidden">
-<img class="absolute inset-0 w-full h-full object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/273092d4c4-10b634e17123f9dc8a1c.png" alt="pixel art landscape with mystical mountains and floating islands in shades of blue and yellow, with glowing crystals and ethereal clouds, 16-bit style">
-<div class="relative container mx-auto px-6 py-20">
-  <div class="max-w-2xl">
-      <h2 class="text-4xl font-bold text-white mb-6">Level Up Your Life</h2>
-      <p class="text-xl text-white mb-8">Transform your daily habits into an epic adventure. Track, improve, and conquer your goals one quest at a time.</p>
-      <div class="flex space-x-4">
-          <button class="bg-yellow-500 hover:bg-yellow-600 text-white px-8 py-3 rounded-lg">Start Your Journey</button>
-      </div>
-  </div>
-</div>
-</section>
-<section id="scene-cards" class="py-16 container mx-auto px-6">
-  <h3 class="text-2xl font-bold text-blue-800 mb-8">Your Active Quests</h3>
-  <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/21abd35af0-a38af54f0951f27fd82f.png" alt="pixel art forest scene with trees and mystical elements, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Forest of Focus</h4>
-              <p class="text-blue-600 text-sm mb-4">Complete daily meditation tasks</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 7/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/1acceabec3-38d674ae3a94cf57bab5.png" alt="pixel art mountain peaks with clouds, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Peak Performance</h4>
-              <p class="text-blue-600 text-sm mb-4">Fitness goals tracking</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 5/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-      <!-- to be inserted in phase 2
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-          <img class="w-full h-48 object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/5fb43c4e64-b880b55f8bd39b4fb40a.png" alt="pixel art crystal cave with glowing elements, 16-bit style">
-          <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Crystal Clarity</h4>
-              <p class="text-blue-600 text-sm mb-4">Mind training exercises</p>
-              <div class="flex justify-between items-center">
-                  <span class="text-blue-500">Progress: 3/10</span>
-                  <i class="fa-solid fa-arrow-right text-blue-500"></i>
-              </div>
-          </div>
-      </div>
-    -->
-  </div>
-</section>
-<section id="quick-actions" class="py-16 bg-white">
-  <div class="container mx-auto px-6">
-      <h3 class="text-2xl font-bold text-blue-800 mb-8">Quick Actions</h3>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-          <div class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors">
-              <i class="fa-solid fa-plus-circle text-blue-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-blue-800 mb-2">New Task</h4>
-              <p class="text-blue-600 text-sm">Create a new daily quest</p>
-          </div>
-          <div class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors">
-              <i class="fa-solid fa-coins text-yellow-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-yellow-800 mb-2">Budget</h4>
-              <p class="text-yellow-600 text-sm">Set daily spending limits</p>
-          </div>
-          <div class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors">
-              <i class="fa-solid fa-chart-line text-blue-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-blue-800 mb-2">Progress</h4>
-              <p class="text-blue-600 text-sm">View your journey stats</p>
-          </div>
-          <div class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors">
-              <i class="fa-solid fa-trophy text-yellow-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-yellow-800 mb-2">Achievements</h4>
-              <p class="text-yellow-600 text-sm">Check your badges</p>
-          </div>
-      </div>
-  </div>
-</section>
-<footer id="footer" class="bg-blue-900 text-blue-100">
-  <div class="container mx-auto px-6 py-12">
-      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-          <div class="space-y-4">
+          <div id="main-container" class="relative">
+<img class="absolute inset-0 w-full h-full object-cover z-0" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/ad8bcbbae5-eb681cd53a3213ce4945.png" alt="pixel art mountain landscape with snow peaks, blue sky, 8-bit style, retro gaming aesthetic" >
+<div class="relative z-10">
+  <header id="header" class="fixed top-0 w-full bg-white/90 backdrop-blur-sm z-50 border-b border-blue-100">
+      <div class="container mx-auto px-6 py-4">
+          <div class="flex items-center justify-between">
               <div class="flex items-center space-x-2">
-                  <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
-                  <h4 class="text-xl font-bold">Heroic Habits</h4>
+                  <i class="fa-solid fa-gamepad text-blue-600 text-2xl"></i>
+                  <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
               </div>
-              <p class="text-blue-300">Level up your life, one habit at a time.</p>
-          </div>
-          <div>
-              <h5 class="font-bold mb-4">Features</h5>
-              <ul class="space-y-2">
-                  <li><span class="hover:text-blue-300 cursor-pointer">Dashboard</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Tasks</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Progress</span></li>
-              </ul>
-          </div>
-          <div>
-              <h5 class="font-bold mb-4">Support</h5>
-              <ul class="space-y-2">
-                  <li><span class="hover:text-blue-300 cursor-pointer">Help Center</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Community</span></li>
-                  <li><span class="hover:text-blue-300 cursor-pointer">Contact</span></li>
-              </ul>
-          </div>
-          <div>
-              <h5 class="font-bold mb-4">Follow Us</h5>
-              <div class="flex space-x-4">
-                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
-                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
-                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
+              <nav class="hidden md:flex space-x-8">
+                  <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</span>
+                  <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Tasks</span>
+                  <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Progress</span>
+                  <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Settings</span>
+              </nav>
+              <div class="flex items-center space-x-4">
+                  <button class="text-blue-700 hover:text-blue-500">
+                      <i class="fa-regular fa-bell text-xl"></i>
+                  </button>
+                  <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-3.jpg" alt="Profile" class="w-10 h-10 rounded-full border-2 border-blue-300">
               </div>
           </div>
       </div>
-      <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
-          <p>© 2025 Heroic Habits. All rights reserved.</p>
+  </header>
+  <section id="peak-performance" class="pt-32 pb-16">
+      <div class="container mx-auto px-6">
+          <h2 class="text-4xl font-bold text-white mb-4 text-center text-shadow">Peak Performance</h2>
+          <p class="text-xl text-white mb-12 text-center text-shadow">Track your training progress below</p>
+          <div class="max-w-3xl mx-auto bg-white/95 backdrop-blur-sm rounded-2xl shadow-2xl p-8">
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                  <div class="space-y-4">
+                      <label class="block text-blue-800 font-bold mb-2">Daily Calorie Goal</label>
+                      <div class="flex items-center space-x-4">
+                          <input type="number" class="w-full px-4 py-3 rounded-lg border border-blue-200 focus:border-blue-500 focus:ring-2 focus:ring-blue-200" placeholder="Enter target calories">
+                          <button class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700">
+                              <i class="fa-solid fa-save"></i>
+                          </button>
+                      </div>
+                  </div>
+                  <div class="space-y-4">
+                      <label class="block text-blue-800 font-bold mb-2">Calories Consumed Today</label>
+                      <div class="flex items-center space-x-4">
+                          <input type="number" class="w-full px-4 py-3 rounded-lg border border-blue-200 focus:border-blue-500 focus:ring-2 focus:ring-blue-200" placeholder="Enter consumed calories">
+                          <button class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700">
+                              <i class="fa-solid fa-save"></i>
+                          </button>
+                      </div>
+                  </div>
+              </div>
+              <div class="mt-8 p-6 bg-blue-50/80 backdrop-blur-sm rounded-xl">
+                  <div class="flex justify-between items-center">
+                      <div>
+                          <h3 class="text-xl font-bold text-blue-800">Remaining Calories</h3>
+                      </div>
+                      <div class="text-3xl font-bold text-blue-800">
+                          <span id="remaining-calories">0</span>
+                          <span class="text-blue-600 text-xl">cal</span>
+                      </div>
+                  </div>
+              </div>
+              <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-6">
+                  <div class="bg-green-50/80 backdrop-blur-sm p-4 rounded-xl">
+                      <i class="fa-solid fa-bullseye text-green-600 text-2xl mb-2"></i>
+                      <h4 class="font-bold text-green-800">Daily Target</h4>
+                      <p class="text-green-600">2000 cal</p>
+                  </div>
+                  <div class="bg-yellow-50/80 backdrop-blur-sm p-4 rounded-xl">
+                      <i class="fa-solid fa-utensils text-yellow-600 text-2xl mb-2"></i>
+                      <h4 class="font-bold text-yellow-800">Consumed</h4>
+                      <p class="text-yellow-600">1200 cal</p>
+                  </div>
+                  <!-- to be inserted in phase 2
+                  <div class="bg-blue-50/80 backdrop-blur-sm p-4 rounded-xl">
+                      <i class="fa-solid fa-chart-line text-blue-600 text-2xl mb-2"></i>
+                      <h4 class="font-bold text-blue-800">Weekly Avg</h4>
+                      <p class="text-blue-600">1850 cal</p>
+                  </div>
+                -->
+              </div>
+          </div>
       </div>
-  </div>
-</footer>
+  </section>
+  <footer id="footer" class="bg-blue-900 text-blue-100">
+      <div class="container mx-auto px-6 py-12">
+          <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+              <div class="space-y-4">
+                  <div class="flex items-center space-x-2">
+                      <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
+                      <h4 class="text-xl font-bold">Heroic Habits</h4>
+                  </div>
+                  <p class="text-blue-300">Level up your life, one habit at a time.</p>
+              </div>
+              <div>
+                  <h5 class="font-bold mb-4">Features</h5>
+                  <ul class="space-y-2">
+                      <li><span class="hover:text-blue-300 cursor-pointer">Dashboard</span></li>
+                      <li><span class="hover:text-blue-300 cursor-pointer">Tasks</span></li>
+                      <li><span class="hover:text-blue-300 cursor-pointer">Progress</span></li>
+                  </ul>
+              </div>
+              <div>
+                  <h5 class="font-bold mb-4">Support</h5>
+                  <ul class="space-y-2">
+                      <li><span class="hover:text-blue-300 cursor-pointer">Help Center</span></li>
+                      <li><span class="hover:text-blue-300 cursor-pointer">Community</span></li>
+                      <li><span class="hover:text-blue-300 cursor-pointer">Contact</span></li>
+                  </ul>
+              </div>
+              <div>
+                  <h5 class="font-bold mb-4">Follow Us</h5>
+                  <div class="flex space-x-4">
+                      <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
+                      <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
+                      <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
+                  </div>
+              </div>
+          </div>
+          <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
+              <p>© 2025 Heroic Habits. All rights reserved.</p>
+          </div>
+      </div>
+  </footer>
+</div>
 </div>
         </body>
       </html>
