trying to add React func

--- a/client/index.html
+++ b/client/index.html
@@ -587,6 +587,7 @@
       style="height: 200px; width: 300px"
       title="Iframe Example"
     ></iframe>
+    <div id="root"></div>
     <div id="main-container" class="bg-gradient-to-b from-yellow-50 to-blue-50">
       <header
         id="header"
@@ -613,7 +614,10 @@
               >
             </nav>
             <div class="flex items-center space-x-4">
-              <button class="text-blue-700 hover:text-blue-500" title="Notifications">
+              <button
+                class="text-blue-700 hover:text-blue-500"
+                title="Notifications"
+              >
                 <i class="fa-regular fa-bell text-xl"></i>
               </button>
               <img
