Updated index page (changes 1/2) on 1/29/25

--- a/client/index.html
+++ b/client/index.html
@@ -582,11 +582,6 @@
   </head>
 
   <body class="h-full text-base-content">
-    <iframe
-      src="https://pixe.la/v1/users/a-know/graphs/test-graph"
-      style="height: 200px; width: 300px"
-      title="Iframe Example"
-    ></iframe>
     <div id="root"></div>
     <div id="main-container" class="bg-gradient-to-b from-yellow-50 to-blue-50">
       <header
@@ -650,11 +645,6 @@
               >
                 Start Your Journey
               </button>
-              <button
-                class="bg-blue-600/20 hover:bg-blue-600/30 text-white px-8 py-3 rounded-lg backdrop-blur-sm"
-              >
-                Watch Tutorial
-              </button>
             </div>
           </div>
         </div>
@@ -675,10 +665,9 @@
             <div class="p-6">
               <h4 class="font-bold text-blue-800 mb-2">Forest of Focus</h4>
               <p class="text-blue-600 text-sm mb-4">
-                Complete daily meditation tasks
+                Take a moment to meditate and reflect
               </p>
               <div class="flex justify-between items-center">
-                <span class="text-blue-500">Progress: 7/10</span>
                 <i class="fa-solid fa-arrow-right text-blue-500"></i>
               </div>
             </div>
@@ -693,9 +682,8 @@
             />
             <div class="p-6">
               <h4 class="font-bold text-blue-800 mb-2">Peak Performance</h4>
-              <p class="text-blue-600 text-sm mb-4">Fitness goals tracking</p>
+              <p class="text-blue-600 text-sm mb-4">Caloric goals tracking</p>
               <div class="flex justify-between items-center">
-                <span class="text-blue-500">Progress: 5/10</span>
                 <i class="fa-solid fa-arrow-right text-blue-500"></i>
               </div>
             </div>
@@ -709,10 +697,9 @@
               alt="pixel art crystal cave with glowing elements, 16-bit style"
             />
             <div class="p-6">
-              <h4 class="font-bold text-blue-800 mb-2">Crystal Clarity</h4>
-              <p class="text-blue-600 text-sm mb-4">Mind training exercises</p>
+              <h4 class="font-bold text-blue-800 mb-2">Task Taker</h4>
+              <p class="text-blue-600 text-sm mb-4">Create your daily quest goals</p>
               <div class="flex justify-between items-center">
-                <span class="text-blue-500">Progress: 3/10</span>
                 <i class="fa-solid fa-arrow-right text-blue-500"></i>
               </div>
             </div>
@@ -730,14 +717,14 @@
                 class="fa-solid fa-plus-circle text-blue-600 text-3xl mb-4"
               ></i>
               <h4 class="font-bold text-blue-800 mb-2">New Task</h4>
-              <p class="text-blue-600 text-sm">Create a new daily quest</p>
+              <p class="text-blue-600 text-sm">Create a new daily quest (coming soon)</p>
             </div>
             <div
               class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors"
             >
               <i class="fa-solid fa-coins text-yellow-600 text-3xl mb-4"></i>
               <h4 class="font-bold text-yellow-800 mb-2">Budget</h4>
-              <p class="text-yellow-600 text-sm">Set daily spending limits</p>
+              <p class="text-yellow-600 text-sm">Set daily spending limits (coming soon)</p>
             </div>
             <div
               class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors"
@@ -745,13 +732,6 @@
               <i class="fa-solid fa-chart-line text-blue-600 text-3xl mb-4"></i>
               <h4 class="font-bold text-blue-800 mb-2">Progress</h4>
               <p class="text-blue-600 text-sm">View your journey stats</p>
-            </div>
-            <div
-              class="bg-yellow-50 p-6 rounded-xl hover:bg-yellow-100 transition-colors"
-            >
-              <i class="fa-solid fa-trophy text-yellow-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-yellow-800 mb-2">Achievements</h4>
-              <p class="text-yellow-600 text-sm">Check your badges</p>
             </div>
           </div>
         </div>
@@ -782,26 +762,6 @@
                 <li>
                   <span class="hover:text-blue-300 cursor-pointer"
                     >Progress</span
-                  >
-                </li>
-              </ul>
-            </div>
-            <div>
-              <h5 class="font-bold mb-4">Support</h5>
-              <ul class="space-y-2">
-                <li>
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    >Help Center</span
-                  >
-                </li>
-                <li>
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    >Community</span
-                  >
-                </li>
-                <li>
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    >Contact</span
                   >
                 </li>
               </ul>
