added redirects to appropriate pages when clicked. fixed the value inputs in peak performance. updated header and footer in each page.

--- a/client/index.html
+++ b/client/index.html
@@ -595,18 +595,10 @@
               <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
             </div>
             <nav class="hidden md:flex space-x-8">
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                >Dashboard</span
-              >
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                >Tasks</span
-              >
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                >Progress</span
-              >
-              <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                >Settings</span
-              >
+              <a href="index.html" class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</a>            <nav class="hidden md:flex space-x-8"></nav>
+                    <span class="text-blue-700 hover:text-blue-500 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span>
+                </nav>
+                <div class="flex items-center space-x-4">
             </nav>
             <div class="flex items-center space-x-4">
               <button
@@ -635,16 +627,17 @@
             <h2 class="text-4xl font-bold text-white mb-6">
               Level Up Your Life
             </h2>
-            <p class="text-xl text-blue-50 mb-8">
+            <p class="text-xl text-gray-700 mb-8">
               Transform your daily habits into an epic adventure. Track,
               improve, and conquer your goals one quest at a time.
             </p>
             <div class="flex space-x-4">
-              <button
-                class="bg-yellow-500 hover:bg-yellow-600 text-white px-8 py-3 rounded-lg"
+              <a
+              href="userLogin.html"
+              class="bg-yellow-500 hover:bg-yellow-600 text-white px-8 py-3 rounded-lg"
               >
-                Start Your Journey
-              </button>
+              Start Your Journey
+              </a>
             </div>
           </div>
         </div>
@@ -662,7 +655,7 @@
               src="https://storage.googleapis.com/uxpilot-auth.appspot.com/21abd35af0-a38af54f0951f27fd82f.png"
               alt="pixel art forest scene with trees and mystical elements, 16-bit style"
             />
-            <div class="p-6">
+            <div class="p-6" onclick="location.href='forestFocus.html'">
               <h4 class="font-bold text-blue-800 mb-2">Forest of Focus</h4>
               <p class="text-blue-600 text-sm mb-4">
                 Take a moment to meditate and reflect
@@ -680,7 +673,7 @@
               src="https://storage.googleapis.com/uxpilot-auth.appspot.com/1acceabec3-38d674ae3a94cf57bab5.png"
               alt="pixel art mountain peaks with clouds, 16-bit style"
             />
-            <div class="p-6">
+            <div class="p-6" onclick="location.href='peakPerformance.html'">
               <h4 class="font-bold text-blue-800 mb-2">Peak Performance</h4>
               <p class="text-blue-600 text-sm mb-4">Caloric goals tracking</p>
               <div class="flex justify-between items-center">
@@ -698,7 +691,7 @@
             />
             <div class="p-6">
               <h4 class="font-bold text-blue-800 mb-2">Task Taker</h4>
-              <p class="text-blue-600 text-sm mb-4">Create your daily quest goals</p>
+              <p class="text-blue-600 text-sm mb-4">Create your daily quest goals (coming soon)</p>
               <div class="flex justify-between items-center">
                 <i class="fa-solid fa-arrow-right text-blue-500"></i>
               </div>
@@ -727,10 +720,10 @@
               <p class="text-yellow-600 text-sm">Set daily spending limits (coming soon)</p>
             </div>
             <div
-              class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors"
+              class="bg-blue-50 p-6 rounded-xl hover:bg-blue-100 transition-colors" onclick="location.href='progressPage.html'"
             >
               <i class="fa-solid fa-chart-line text-blue-600 text-3xl mb-4"></i>
-              <h4 class="font-bold text-blue-800 mb-2">Progress</h4>
+                <h4 class="font-bold text-blue-800 mb-2 cursor-pointer">Progress</h4>
               <p class="text-blue-600 text-sm">View your journey stats</p>
             </div>
           </div>
@@ -738,54 +731,33 @@
       </section>
       <footer id="footer" class="bg-blue-900 text-blue-100">
         <div class="container mx-auto px-6 py-12">
-          <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-            <div class="space-y-4">
-              <div class="flex items-center space-x-2">
-                <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
-                <h4 class="text-xl font-bold">Heroic Habits</h4>
-              </div>
-              <p class="text-blue-300">
-                Level up your life, one habit at a time.
-              </p>
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+                <div class="space-y-4">
+                    <div class="flex items-center space-x-2">
+                        <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
+                        <h4 class="text-xl font-bold">Heroic Habits</h4>
+                    </div>
+                    <p class="text-blue-300">Level up your life, one habit at a time.</p>
+                </div>
+                <div>
+                    <h5 class="font-bold mb-4">Features</h5>
+                    <ul class="space-y-2">
+                      <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='index.html'">Dashboard</span></li>
+                      <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span></li>
+                    </ul>
+                </div>
+                <div>
+                    <h5 class="font-bold mb-4">Follow Us</h5>
+                    <div class="flex space-x-4">
+                        <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
+                        <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
+                        <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
+                    </div>
+                </div>
             </div>
-            <div>
-              <h5 class="font-bold mb-4">Features</h5>
-              <ul class="space-y-2">
-                <li>
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    >Dashboard</span
-                  >
-                </li>
-                <li>
-                  <span class="hover:text-blue-300 cursor-pointer">Tasks</span>
-                </li>
-                <li>
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    >Progress</span
-                  >
-                </li>
-              </ul>
+            <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
+                <p>© 2025 Heroic Habits. All rights reserved.</p>
             </div>
-            <div>
-              <h5 class="font-bold mb-4">Follow Us</h5>
-              <div class="flex space-x-4">
-                <span class="hover:text-blue-300 cursor-pointer"
-                  ><i class="fa-brands fa-twitter text-xl"></i
-                ></span>
-                <span class="hover:text-blue-300 cursor-pointer"
-                  ><i class="fa-brands fa-discord text-xl"></i
-                ></span>
-                <span class="hover:text-blue-300 cursor-pointer"
-                  ><i class="fa-brands fa-instagram text-xl"></i
-                ></span>
-              </div>
-            </div>
-          </div>
-          <div
-            class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400"
-          >
-            <p>© 2025 Heroic Habits. All rights reserved.</p>
-          </div>
         </div>
       </footer>
     </div>
