--- a/client/createUser.html
+++ b/client/createUser.html
@@ -587,10 +587,10 @@
                             <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
                         </div>
                         <nav class="hidden md:flex space-x-8">
-                            <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</span>
-                            <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Tasks</span>
-                            <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Progress</span>
-                            <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Settings</span>
+                          <a href="index.html" class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</a>            <nav class="hidden md:flex space-x-8"></nav>
+                          <span class="text-blue-700 hover:text-blue-500 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span>
+                      </nav>
+                      <div class="flex items-center space-x-4">
                         </nav>
                         <div class="flex items-center space-x-4">
                             <button class="text-blue-700 hover:text-blue-500">
@@ -637,8 +637,8 @@
               </button>
           </form>
           <div class="mt-6 text-center text-sm text-gray-600">
-              Already have an account? 
-              <span  class="text-indigo-600 hover:text-indigo-700 font-medium cursor-pointer">Sign in</span>
+                Already have an account? 
+                <span class="text-indigo-600 hover:text-indigo-700 font-medium cursor-pointer" onclick="location.href='userLogin.html'">Sign in</span>
           </div>
       </div>
   </div>
@@ -656,17 +656,8 @@
             <div>
                 <h5 class="font-bold mb-4">Features</h5>
                 <ul class="space-y-2">
-                    <li><span class="hover:text-blue-300 cursor-pointer">Dashboard</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Tasks</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Progress</span></li>
-                </ul>
-            </div>
-            <div>
-                <h5 class="font-bold mb-4">Support</h5>
-                <ul class="space-y-2">
-                    <li><span class="hover:text-blue-300 cursor-pointer">Help Center</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Community</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Contact</span></li>
+                  <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='index.html'">Dashboard</span></li>
+                  <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span></li>
                 </ul>
             </div>
             <div>
