--- a/client/peakPerformance.html
+++ b/client/peakPerformance.html
@@ -599,18 +599,10 @@
                 <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
               </div>
               <nav class="hidden md:flex space-x-8">
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                  >Dashboard</span
-                >
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                  >Tasks</span
-                >
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                  >Progress</span
-                >
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer"
-                  >Settings</span
-                >
+                <a href="index.html" class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</a>            <nav class="hidden md:flex space-x-8"></nav>
+                <span class="text-blue-700 hover:text-blue-500 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span>
+            </nav>
+            <div class="flex items-center space-x-4">
               </nav>
               <div class="flex items-center space-x-4">
                 <button class="text-blue-700 hover:text-blue-500">
@@ -625,6 +617,23 @@
             </div>
           </div>
         </header>
+        <script>
+          document.addEventListener("DOMContentLoaded", function () {
+            const dailyGoalInput = document.querySelector('input[placeholder="Enter target calories"]');
+            const consumedInput = document.querySelector('input[placeholder="Enter consumed calories"]');
+            const remainingCaloriesDisplay = document.getElementById("remaining-calories");
+
+            function updateRemainingCalories() {
+              const dailyGoal = parseInt(dailyGoalInput.value) || 0;
+              const consumed = parseInt(consumedInput.value) || 0;
+              const remaining = dailyGoal - consumed;
+              remainingCaloriesDisplay.textContent = remaining;
+            }
+
+            dailyGoalInput.addEventListener("input", updateRemainingCalories);
+            consumedInput.addEventListener("input", updateRemainingCalories);
+          });
+        </script>
         <section id="peak-performance" class="pt-32 pb-16">
           <div class="container mx-auto px-6">
             <h2
@@ -649,11 +658,6 @@
                       class="w-full px-4 py-3 rounded-lg border border-blue-200 focus:border-blue-500 focus:ring-2 focus:ring-blue-200"
                       placeholder="Enter target calories"
                     />
-                    <button
-                      class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700"
-                    >
-                      <i class="fa-solid fa-save"></i>
-                    </button>
                   </div>
                 </div>
                 <div class="space-y-4">
@@ -666,11 +670,6 @@
                       class="w-full px-4 py-3 rounded-lg border border-blue-200 focus:border-blue-500 focus:ring-2 focus:ring-blue-200"
                       placeholder="Enter consumed calories"
                     />
-                    <button
-                      class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700"
-                    >
-                      <i class="fa-solid fa-save"></i>
-                    </button>
                   </div>
                 </div>
               </div>
@@ -687,7 +686,7 @@
                   </div>
                 </div>
               </div>
-              <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-6">
+              <!--<div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="bg-green-50/80 backdrop-blur-sm p-4 rounded-xl">
                   <i
                     class="fa-solid fa-bullseye text-green-600 text-2xl mb-2"
@@ -702,89 +701,39 @@
                   <h4 class="font-bold text-yellow-800">Consumed</h4>
                   <p class="text-yellow-600">1200 cal</p>
                 </div>
-                <!-- to be inserted in phase 2
-                  <div class="bg-blue-50/80 backdrop-blur-sm p-4 rounded-xl">
-                      <i class="fa-solid fa-chart-line text-blue-600 text-2xl mb-2"></i>
-                      <h4 class="font-bold text-blue-800">Weekly Avg</h4>
-                      <p class="text-blue-600">1850 cal</p>
-                  </div>
-                -->
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
         <footer id="footer" class="bg-blue-900 text-blue-100">
           <div class="container mx-auto px-6 py-12">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-              <div class="space-y-4">
-                <div class="flex items-center space-x-2">
-                  <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
-                  <h4 class="text-xl font-bold">Heroic Habits</h4>
-                </div>
-                <p class="text-blue-300">
-                  Level up your life, one habit at a time.
-                </p>
+              <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+                  <div class="space-y-4">
+                      <div class="flex items-center space-x-2">
+                          <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
+                          <h4 class="text-xl font-bold">Heroic Habits</h4>
+                      </div>
+                      <p class="text-blue-300">Level up your life, one habit at a time.</p>
+                  </div>
+                  <div>
+                      <h5 class="font-bold mb-4">Features</h5>
+                      <ul class="space-y-2">
+                        <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='index.html'">Dashboard</span></li>
+                        <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span></li>
+                      </ul>
+                  </div>
+                  <div>
+                      <h5 class="font-bold mb-4">Follow Us</h5>
+                      <div class="flex space-x-4">
+                          <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
+                          <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
+                          <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
+                      </div>
+                  </div>
               </div>
-              <div>
-                <h5 class="font-bold mb-4">Features</h5>
-                <ul class="space-y-2">
-                  <li>
-                    <span class="hover:text-blue-300 cursor-pointer"
-                      >Dashboard</span
-                    >
-                  </li>
-                  <li>
-                    <span class="hover:text-blue-300 cursor-pointer"
-                      >Tasks</span
-                    >
-                  </li>
-                  <li>
-                    <span class="hover:text-blue-300 cursor-pointer"
-                      >Progress</span
-                    >
-                  </li>
-                </ul>
+              <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
+                  <p>© 2025 Heroic Habits. All rights reserved.</p>
               </div>
-              <div>
-                <h5 class="font-bold mb-4">Support</h5>
-                <ul class="space-y-2">
-                  <li>
-                    <span class="hover:text-blue-300 cursor-pointer"
-                      >Help Center</span
-                    >
-                  </li>
-                  <li>
-                    <span class="hover:text-blue-300 cursor-pointer"
-                      >Community</span
-                    >
-                  </li>
-                  <li>
-                    <span class="hover:text-blue-300 cursor-pointer"
-                      >Contact</span
-                    >
-                  </li>
-                </ul>
-              </div>
-              <div>
-                <h5 class="font-bold mb-4">Follow Us</h5>
-                <div class="flex space-x-4">
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    ><i class="fa-brands fa-twitter text-xl"></i
-                  ></span>
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    ><i class="fa-brands fa-discord text-xl"></i
-                  ></span>
-                  <span class="hover:text-blue-300 cursor-pointer"
-                    ><i class="fa-brands fa-instagram text-xl"></i
-                  ></span>
-                </div>
-              </div>
-            </div>
-            <div
-              class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400"
-            >
-              <p>© 2025 Heroic Habits. All rights reserved.</p>
-            </div>
           </div>
         </footer>
       </div>
