--- a/client/userLogin.html
+++ b/client/userLogin.html
@@ -589,10 +589,10 @@
                 <h1 class="text-xl font-bold text-blue-800">Heroic Habits</h1>
             </div>
             <nav class="hidden md:flex space-x-8">
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</span>
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Tasks</span>
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Progress</span>
-                <span class="text-blue-700 hover:text-blue-500 cursor-pointer">Settings</span>
+              <a href="index.html" class="text-blue-700 hover:text-blue-500 cursor-pointer">Dashboard</a>            <nav class="hidden md:flex space-x-8"></nav>
+              <span class="text-blue-700 hover:text-blue-500 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span>
+          </nav>
+          <div class="flex items-center space-x-4">
             </nav>
             <div class="flex items-center space-x-4">
                 <button class="text-blue-700 hover:text-blue-500">
@@ -625,51 +625,42 @@
       </form>
       <p class="mt-6 text-center text-sky-100">
           Not a current user? 
-          <span class="text-yellow-400 hover:text-yellow-300 cursor-pointer">Create an account now!</span>
+          <a href="createUser.html" class="text-yellow-400 hover:text-yellow-300 cursor-pointer">Create an account now!</a>
       </p>
   </div>
 </div>
 </main>
 <footer id="footer" class="bg-blue-900 text-blue-100">
-    <div class="container mx-auto px-6 py-12">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-            <div class="space-y-4">
-                <div class="flex items-center space-x-2">
-                    <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
-                    <h4 class="text-xl font-bold">Heroic Habits</h4>
-                </div>
-                <p class="text-blue-300">Level up your life, one habit at a time.</p>
-            </div>
-            <div>
-                <h5 class="font-bold mb-4">Features</h5>
-                <ul class="space-y-2">
-                    <li><span class="hover:text-blue-300 cursor-pointer">Dashboard</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Tasks</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Progress</span></li>
-                </ul>
-            </div>
-            <div>
-                <h5 class="font-bold mb-4">Support</h5>
-                <ul class="space-y-2">
-                    <li><span class="hover:text-blue-300 cursor-pointer">Help Center</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Community</span></li>
-                    <li><span class="hover:text-blue-300 cursor-pointer">Contact</span></li>
-                </ul>
-            </div>
-            <div>
-                <h5 class="font-bold mb-4">Follow Us</h5>
-                <div class="flex space-x-4">
-                    <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
-                    <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
-                    <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
-                </div>
-            </div>
-        </div>
-        <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
-            <p>© 2025 Heroic Habits. All rights reserved.</p>
-        </div>
-    </div>
-  </footer>
+  <div class="container mx-auto px-6 py-12">
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+          <div class="space-y-4">
+              <div class="flex items-center space-x-2">
+                  <i class="fa-solid fa-gamepad text-blue-300 text-2xl"></i>
+                  <h4 class="text-xl font-bold">Heroic Habits</h4>
+              </div>
+              <p class="text-blue-300">Level up your life, one habit at a time.</p>
+          </div>
+          <div>
+              <h5 class="font-bold mb-4">Features</h5>
+              <ul class="space-y-2">
+                <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='index.html'">Dashboard</span></li>
+                <li><span class="hover:text-blue-300 cursor-pointer" onclick="location.href='progressPage.html'">Progress</span></li>
+              </ul>
+          </div>
+          <div>
+              <h5 class="font-bold mb-4">Follow Us</h5>
+              <div class="flex space-x-4">
+                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-twitter text-xl"></i></span>
+                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-discord text-xl"></i></span>
+                  <span class="hover:text-blue-300 cursor-pointer"><i class="fa-brands fa-instagram text-xl"></i></span>
+              </div>
+          </div>
+      </div>
+      <div class="border-t border-blue-800 mt-12 pt-8 text-center text-blue-400">
+          <p>© 2025 Heroic Habits. All rights reserved.</p>
+      </div>
+  </div>
+</footer>
 </div>
         </body>
       </html>
